--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "compilerOptions": {
     "baseUrl": "./src",
+    "paths": {
+      "assets/*": ["assets/*"],
+      "@styles/*": ["styles/*"]
+    },
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "target": "es2020",
     "lib": ["dom", "dom.iterable", "esnext"],
     "skipLibCheck": true,
